# KlasyfikacjaUrzadzenIoT

./: README.md  requirements.txt
UserInerfacev2/: userInterface.py
UserInerfacev2/flows/: file_inference_workflow.py
data-preparation/: pyproject.toml  run_data_prep.py  temp.py
data-preparation/src/data_preparation/: __init__.py
data-preparation/src/data_preparation.egg-info/: PKG-INFO  SOURCES.txt
data-preparation/src/data_preparation/class_balance/: class_balance.py
data-preparation/src/data_preparation/clean_up/: clean_up.py
data-preparation/src/data_preparation/extract_features/: feature_extractor.py
data-preparation/src/data_preparation/one_hot/: one_hot.py
inference-pipeline/: pyproject.toml
inference-pipeline/src/inference_pipeline/: __init__.py
inference-pipeline/src/inference_pipeline/prediction_interpreter/: prediction_interpreter.py
inference-pipeline/src/inference_pipline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pcapflowexporterv2/: pyproject.toml
svctrainingpipelinebv2/: pyproject.toml
svctrainingpipelinebv2/src/SVCTraining/: __init__.py
svctrainingpipelinebv2/src/SVCTraining.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
svctrainingpipelinebv2/src/SVCTraining/HyperparameterTuner/: HyperparameterTuner.py
svctrainingpipelinebv2/src/SVCTraining/ModelEvaluator/: ModelEvaluator.py
svctrainingpipelinebv2/src/SVCTraining/SVCTrainer/: SvcTrainer.py
svctrainingpipelinebv2/src/SVCTraining/TrainTestValSplit/: TrainTestValSplit.py
svctrainingpipelinebv2/src/SVCTraining/TrainingPipeline/: SVC_Training.py
(+20 files in other folders)
